# pylicator

./: LICENSE  README.md  pylicator.py  pylicator.service  pyproject.toml  readme.md  requirements.txt  setup.py
src/pylicator/: packet.py  pylicator.py  pylicator.service
